# clroxide

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
examples/: compose_clr.rs  custom_app_domain.rs  execute_assembly.rs  patch_exit.rs  powershell_runspace.rs  streaming_output.rs
src/: lib.rs
src/clr/: mod.rs
src/primitives/: helpers.rs  iappdomain.rs  iassembly.rs  iclrmetahost.rs  iclrruntimeinfo.rs  iconstructorinfo.rs  icorruntimehost.rs  ienumunknown.rs  imethodinfo.rs  ipropertyinfo.rs  istringwriter.rs  itype.rs  iunknown.rs  mod.rs  types.rs
test/source/: test.sln
test/source/WithArgs/: Program.cs  WithArgs.csproj
test/source/WithArgs/Properties/: AssemblyInfo.cs
test/source/WithExit/: Program.cs  WithExit.csproj
test/source/WithExit/Properties/: AssemblyInfo.cs
test/source/WithoutArgs/: Program.cs  WithoutArgs.csproj
test/source/WithoutArgs/Properties/: AssemblyInfo.cs
